# agent-tool-grafana-cli

./: .gitignore  AGENTS.md  BUILDING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: COMMANDS.md
scripts/: bootstrap_test_stack.sh  build_binary.py  gen_docs.py
spike/: VERIFIED_FINDINGS.md
src/grafanacli/: __init__.py  __main__.py  analysis.py  appctx.py  cli.py  client.py  config.py  errors.py  loki.py  routing.py  sources.py  spec.py  timerange.py
src/grafanacli/commands/: _shared.py  alert.py  auth.py  context.py  dashboard.py  datasource.py  guide.py  install.py  logs.py  metrics.py  notify.py  org.py  raw.py  scan.py  server.py  settings.py
tests/: conftest.py  test_analysis_unit.py  test_client_unit.py  test_config_unit.py  test_guide_unit.py  test_integration_live.py  test_loki_unit.py  test_report_unit.py  test_roles_live.py  test_routing_unit.py  test_timerange_unit.py
